--- a/AndroidStudio/apps/MyFirstApp/app/src/main/res/values/strings.xml
+++ b/AndroidStudio/apps/MyFirstApp/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_display_message">My Message</string>
+    <string name="action_search">Find</string>
 </resources>
