--- a/AndroidStudio/apps/TutorialHTML/app/src/main/res/values/strings.xml
+++ b/AndroidStudio/apps/TutorialHTML/app/src/main/res/values/strings.xml
@@ -3,8 +3,9 @@
 
     <string name="usernameHint">username</string>
     <string name="passwordHint">password</string>
+    <string name="rememberMeText">remember me</string>
+    <string name="skipText">skip</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_personal">PersonalActivity</string>
 
-    <string name="hello_world">Hello world!</string>
 </resources>
